--- a/app/src/main/res/layout/booking_sel_locate.xml
+++ b/app/src/main/res/layout/booking_sel_locate.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Booking_sel_locale">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="167dp">
@@ -96,9 +96,10 @@
             android:layout_marginLeft="376dp"
             android:layout_marginEnd="9dp"
             android:layout_marginRight="9dp"
-            android:src="@drawable/icon_vectorright" />
+            android:src="@drawable/icon_back" />
 
     </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="434dp">
@@ -108,7 +109,9 @@
             android:layout_height="394dp"
             android:background="#4D000000"
             android:orientation="vertical">
+
             <RelativeLayout
+                android:id="@+id/location_0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -157,6 +160,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/location_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -171,7 +175,7 @@
                     android:layout_marginEnd="195dp"
                     android:layout_marginRight="195dp"
                     android:text="Name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -184,7 +188,7 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="Address : Walnet St."
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -201,6 +205,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/location_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -215,7 +220,7 @@
                     android:layout_marginEnd="195dp"
                     android:layout_marginRight="195dp"
                     android:text="Name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -228,7 +233,7 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="Address : Walnet St."
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -246,13 +251,14 @@
                     android:src="@drawable/booking_img3"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    />
+                    app:layout_constraintStart_toStartOf="parent" />
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/location_3"
                 android:layout_width="match_parent"
                 android:layout_height="110dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -264,7 +270,8 @@
                     android:layout_marginEnd="195dp"
                     android:layout_marginRight="195dp"
                     android:text="Name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -276,7 +283,7 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="Address : Walnet St."
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/imageView4"
@@ -294,8 +301,7 @@
                     android:src="@drawable/booking_img3"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    />
+                    app:layout_constraintStart_toStartOf="parent" />
             </RelativeLayout>
 
         </LinearLayout>
